2012-01-26 Adam Moody <moody20@llnl.gov>

	* : tag pmgr-1.0_6

	* pmgr_collective_common.c,h : Added PMGR_ERR codes along with
	function to convert integer to string.  Return new error codes
	int pmgr_read_fd_timeout() and pmgr_write_fd_suppress().

	* pmgr_collective_client_tree.c : Print PMGR_ERR string upon
	error in tree_check().

	* : parameter adjustments
	MPIRUN_OPEN_TIMEOUT 600 --> 1800
	MPIRUN_PORT_SCAN_TIMEOUT 600 --> 1800

2012-01-13 Adam Moody <moody20@llnl.gov>

	* : tag pmgr-1.0_5

	* pmgr_collective_client.c,
	  pmgr_collective_client_common.c : Disable MPIRUN_PORT_SCAN_TIMEOUT
	  if set to -1.

	* pmgr_collective_client.c,
	  pmgr_collective_client_common.c,
	  pmgr_collective_client_slurm.c: Disable MPIRUN_OPEN_TIMEOUT if set
	  to -1.

	* pmgr_collective_client_common.c : Added code to increase timeouts
	by a factor of two after each port sweep, but left this disabled.

	* pmgr_collective_client_common.c : Added code to sleep for some time
	between port scan attempts.

	* pmgr_collective_client_mpirun.c : Added usleep delay back into
	connect and close calls based on rank to stagger across ranks.

	* pmgr_collective_client.c : Don't connect back to mpirun if using
	shared memory.

	* : parameter adjustments
	MPIRUN_OPEN_TIMEOUT 300 --> 600
	MPIRUN_CONNECT_TRIES 7 --> 20
	MPIRUN_CONNECT_TIMEOUT 2 --> 60
	MPIRUN_PORT_SCAN_TIMEOUT 60 --> 600
	MPIRUN_PORT_SCAN_CONNECT_TIMEOUT 100 --> 10000
	MPIRUN_AUTHENTICATE_TIMEOUT 5000 --> 60000

2011-12-07 Adam Moody <moody20@llnl.gov>

	* : tag pmgr-1.0_4

	* : Increased port scan connect timeout from 20msec to 100msec and
	changed default connection direction from parent-to-children to
	children-to-parent.  Track IP:port and hostname of parents and
	children to report in error messages.

2011-11-30 Adam Moody <moody20@llnl.gov>

	* : tag pmgr-1.0_3

	* pmgr_collective_client_common.c,
	  pmgr_collective_client_tree.c,
	  pmgr_collective_client_mpirun.c,